modules/wycs/tests/valid/test_063.wyal
import wycs.core.Map

assert:
  forall ({int,int} xs, int i):
       IndexOf<int,int>(xs,i) > 0 ==> IndexOf<int,int>(xs,i) >= 0
