modules/wycs/tests/invalid/test_053.wyal
assert:
  forall({int} ys, {int} xs):
    xs ⊆ ys ==> |xs| < |ys|